AK: Introduce AK::UTF8String, future AK::String
AK::String has been with us since the start, and it has served us well.
However, it has a number of shortcomings that I'd like to address.
Some of these issues are hard if not impossible to solve incrementally
inside the current AK::String, so instead of doing that, let's build a
new String class and then incrementally move over to it instead.

Problems in today's AK::String:

- It assumes string allocation never fails. This makes it impossible
  to use in allocation-sensitive contexts, and is the reason we had to
  ban AK::String from the kernel entirely.

- The awkward null state. The current AK::String can be null. It's
  different from the empty state, although null strings are considered
  empty. All code is immediately nicer when using Optional<String>,
  but String came before Optional, which is how we ended up like this.

- The encoding of the underlying data is ambiguous. For the most part,
  we use it as if it's always UTF-8, but there have been cases where
  we pass around strings in other encodings (e.g ISO8859-1)

- operator[] and length() are used to iterate over AK::String one byte
  at a time. This is done all over the codebase, and will *not* give
  the right result unless the string is all ASCII.

How we solve these things in AK::UTF8String:

- Functions that may allocate now return ErrorOr<UTF8String> so that
  ENOMEM errors can be passed to the caller.

- UTF8String has no null state. Use Optional<UTF8String> when needed.

- UTF8String is always UTF-8. You *can* jam bogus data in there if you
  really want to, but the API tries its best to ensure you don't.

- There is no operator[] or length(). You can get the underlying data
  with bytes() and byte_length(), but for iterating over code points,
  you should be using an UTF-8 iterator.

Furthermore, it has two nifty new features:

- UTF8String implements a small string optimization (SSO) for strings
  that can fit entirely within a pointer. This mea

--- a/AK/CMakeLists.txt
+++ b/AK/CMakeLists.txt
@@ -23,9 +23,10 @@ set(AK_SOURCES
     Time.cpp
     URL.cpp
     URLParser.cpp
+    UTF8String.cpp
+    UUID.cpp
     Utf16View.cpp
     Utf8View.cpp
-    UUID.cpp
 )
 # AK sources are included from many different places, such as the Kernel, LibC, and Loader
 list(TRANSFORM AK_SOURCES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
